--- a/nasa/esfera1.html
+++ b/nasa/esfera1.html
@@ -44,13 +44,13 @@
 
 <div id="photosphere"></div>
 
-<script src="node_modules/three/build/three.js"></script>
-<script src="node_modules/promise-polyfill/dist/polyfill.js"></script>
-<script src="node_modules/uevent/browser.js"></script>
-<script src="node_modules/nosleep.js/dist/NoSleep.js"></script>
-<script src="node_modules/three/examples/js/controls/DeviceOrientationControls.js"></script>
-<script src="node_modules/three/examples/js/effects/StereoEffect.js"></script>
-<script src="dist/photo-sphere-viewer.js"></script>
+<script src="../node_modules/three/build/three.js"></script>
+<script src="../node_modules/promise-polyfill/dist/polyfill.js"></script>
+<script src="../node_modules/uevent/browser.js"></script>
+<script src="../node_modules/nosleep.js/dist/NoSleep.js"></script>
+<script src="../node_modules/three/examples/js/controls/DeviceOrientationControls.js"></script>
+<script src="../node_modules/three/examples/js/effects/StereoEffect.js"></script>
+<script src="../dist/photo-sphere-viewer.js"></script>
 
 <!-- text used for the marker description -->
 <script type="text/template" id="pin_galaxia1">
@@ -65,7 +65,7 @@
     around 9:00 pm.
   </p>
 
-  <img src="assets/cinturao_de_orion.jpg" style="width:100%"/>
+  <img src="../assets/cinturao_de_orion.jpg" style="width:100%"/>
   <br>
   <br>
   <a href="esfera2.html" class="btn btn-primary">Go to Orion's Belt</a>
@@ -82,7 +82,7 @@
     Centauri B (officially Toliman), and a Centauri C (officially Proxima Centauri).</p>
 
 
-  <img src="assets/alpha_centauri.png" style="width:100%"/>
+  <img src="../assets/alpha_centauri.png" style="width:100%"/>
   <br>
   <br>
   <a href="alphacentauri.html" class="btn btn-primary">View More</a>
@@ -111,7 +111,7 @@
     often.
   </p>
 
-  <img src="assets/pleiades.jpg" style="width:100%"/>
+  <img src="../assets/pleiades.jpg" style="width:100%"/>
   <br>
   <br>
   <a href="pleiades.html" class="btn btn-primary">View More</a>
