--- a/nasa/esfera2.html
+++ b/nasa/esfera2.html
@@ -49,13 +49,13 @@
 
 <div id="photosphere"></div>
 
-<script src="node_modules/three/build/three.js"></script>
-<script src="node_modules/promise-polyfill/dist/polyfill.js"></script>
-<script src="node_modules/uevent/browser.js"></script>
-<script src="node_modules/nosleep.js/dist/NoSleep.js"></script>
-<script src="node_modules/three/examples/js/controls/DeviceOrientationControls.js"></script>
-<script src="node_modules/three/examples/js/effects/StereoEffect.js"></script>
-<script src="dist/photo-sphere-viewer.js"></script>
+<script src="../node_modules/three/build/three.js"></script>
+<script src="../node_modules/promise-polyfill/dist/polyfill.js"></script>
+<script src="../node_modules/uevent/browser.js"></script>
+<script src="../node_modules/nosleep.js/dist/NoSleep.js"></script>
+<script src="../node_modules/three/examples/js/controls/DeviceOrientationControls.js"></script>
+<script src="../node_modules/three/examples/js/effects/StereoEffect.js"></script>
+<script src="../dist/photo-sphere-viewer.js"></script>
 
 <!-- text used for the marker description -->
 <script type="text/template" id="pin_galaxia2">
@@ -69,7 +69,7 @@
     Following the 1920 Great Debate between the astronomers Harlow Shapley and Heber Curtis, observations by Edwin
     Hubble showed that the Milky Way is just one of many galaxies.</p>
 
-  <img src="assets/via_lactea.jpg" style="width:100%"/>
+  <img src="../assets/via_lactea.jpg" style="width:100%"/>
 
   <br>
   <br>
@@ -89,7 +89,7 @@
     the designation a ("alpha") in the Bayer Classification, it is no brighter than Rigel (ß Orionis).
     Betelgeuse is actually brighter than Rigel in infrared wavelength, but not in visible wavelengths.</p>
 
-  <img src="assets/beltelguese.jpg" style="width:100%"/>
+  <img src="../assets/beltelguese.jpg" style="width:100%"/>
   <br>
   <br>
 
@@ -108,7 +108,7 @@
     that of the Sun. Older texts frequently refer to the Orion Nebula as the Great Nebula in Orion or the Great Orion
     Nebula. </p>
 
-  <img src="assets/nebulosa_de_orion.jpg" style="width:100%"/>
+  <img src="../assets/nebulosa_de_orion.jpg" style="width:100%"/>
   <br>
   <br>
 
@@ -130,7 +130,7 @@
     visible in the early night sky during the Northern Winter/Southern Summer, in particular the month of January at
     around 9:00 pm.</p>
 
-  <img src="assets/orion_belt.jpg" style="width:100%"/>
+  <img src="../assets/orion_belt.jpg" style="width:100%"/>
   <br>
   <br>
   <a href="orionsbelt.html" class="btn btn-primary">View More</a>
