--- a/nasa/esfera1.html
+++ b/nasa/esfera1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Digital Stars - Milky Way</title>
 
-  <link rel="stylesheet" href="dist/photo-sphere-viewer.css">
+  <link rel="stylesheet" href="../dist/photo-sphere-viewer.css">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -179,7 +179,7 @@
         container: 'photosphere',
         panorama: panos[0].url,
         caption: panos[0].desc,
-        loadingImg: 'assets/photosphere-logo.gif',
+        loadingImg: '../assets/photosphere-logo.gif',
         longitudeRange: [-7 * Math.PI / 8, 7 * Math.PI / 8],
         latitudeRange: [-3 * Math.PI / 4, 3 * Math.PI / 4],
         autorotateSpeed: '-2rpm',
@@ -212,7 +212,7 @@
                 content: document.getElementById('pin_galaxia1').innerHTML,
                 latitude: 0,
                 longitude: 0.0,
-                image: 'assets/rocket.png',
+                image: '../assets/rocket.png',
                 width: 32,
                 height: 32,
                 anchor: 'bottom center',
@@ -227,7 +227,7 @@
                 content: document.getElementById('pin_item1').innerHTML,
                 latitude: 0.3,
                 longitude: 0.7,
-                image: 'assets/planet.png',
+                image: '../assets/planet.png',
                 width: 32,
                 height: 32,
                 anchor: 'bottom center',
@@ -242,7 +242,7 @@
                 content: document.getElementById('pin_item2').innerHTML,
                 latitude: 0.3,
                 longitude: -0.8,
-                image: 'assets/planet.png',
+                image: '../assets/planet.png',
                 width: 32,
                 height: 32,
                 anchor: 'bottom center',
@@ -257,7 +257,7 @@
                 content: document.getElementById('pin_item3').innerHTML,
                 latitude: -0.5,
                 longitude: -0.5,
-                image: 'assets/planet.png',
+                image: '../assets/planet.png',
                 width: 32,
                 height: 32,
                 anchor: 'bottom center',
@@ -274,7 +274,7 @@
             tooltip: 'Custom marker',
             longitude: data.longitude,
             latitude: data.latitude,
-            image: 'assets/pin1.png',
+            image: '../assets/pin1.png',
             width: 32,
             height: 32,
             anchor: 'bottom center',
@@ -291,7 +291,7 @@
             } else {
                 PSV.hud.updateMarker({
                     id: marker.id,
-                    image: 'assets/pin2.png',
+                    image: '../assets/pin2.png',
                 });
             }
         }
